tests/baselines/reference/regexpExecAndMatchTypeUsages(strict=false).errors.txt
error TS5052: Option 'exactOptionalPropertyTypes' cannot be specified without specifying option 'strictNullChecks'.
tests/cases/compiler/regexpExecAndMatchTypeUsages.ts(17,9): error TS2322: Type 'RegExpExecArray' is not assignable to type 'RegExpMatchArray'.
  Types of property 'every' are incompatible.
    Type '{ <S extends string>(predicate: (value: string, index: number, array: string[]) => value is S, thisArg?: any): this is S[] & { 0: S; }; (predicate: (value: string, index: number, array: string[]) => unknown, thisArg?: any): boolean; }' is not assignable to type '{ <S extends string>(predicate: (value: string, index: number, array: string[]) => value is S, thisArg?: any): this is S[] & { 0: S; }; (predicate: (value: string, index: number, array: string[]) => unknown, thisArg?: any): boolean; }'. Two different types with this name exist, but they are unrelated.
      Type predicate 'this is any[] & { 0: S; }' is not assignable to 'this is any[] & { 0: S; }'.
        Type 'any[] & { 0: S; }' is not assignable to type 'any[] & { 0: S; }'. Two different types with this name exist, but they are unrelated.
          Type 'any[] & { 0: S; }' is not assignable to type '{ 0: S; }'.
            Types of property '0' are incompatible.
              Type 'S' is not assignable to type 'S'. Two different types with this name exist, but they are unrelated.
                'S' is assignable to the constraint of type 'S', but 'S' could be instantiated with a different subtype of constraint 'string'.
tests/cases/compiler/regexpExecAndMatchTypeUsages.ts(20,9): error TS2322: Type 'RegExpMatchArray' is not assignable to type 'RegExpExecArray'.
  Property 'index' is optional in type 'RegExpMatchArray' but required in type 'RegExpExecArray'.


!!! error TS5052: Option 'exactOptionalPropertyTypes' cannot be specified without specifying option 'strictNullChecks'.
==== tests/cases/compiler/regexpExecAndMatchTypeUsages.ts (2 errors) ====
    export function foo(matchResult: RegExpMatchArray, execResult: RegExpExecArray) {
        matchResult[0].length;
        matchResult[999].length;
        matchResult.index + 0;
        matchResult.input.length;
        matchResult.groups["someVariable"].length;
        matchResult.groups = undefined;
    
        execResult[0].length;
        execResult[999].length;
        execResult.index + 0;
        execResult.input.length;
        execResult.groups["someVariable"].length;
        execResult.groups = undefined;
    
        if (Math.random()) {
            matchResult = execResult;
            ~~~~~~~~~~~
!!! error TS2322: Type 'RegExpExecArray' is not assignable to type 'RegExpMatchArray'.
!!! error TS2322:   Types of property 'every' are incompatible.
!!! error TS2322:     Type '{ <S extends string>(predicate: (value: string, index: number, array: string[]) => value is S, thisArg?: any): this is S[] & { 0: S; }; (predicate: (value: string, index: number, array: string[]) => unknown, thisArg?: any): boolean; }' is not assignable to type '{ <S extends string>(predicate: (value: string, index: number, array: string[]) => value is S, thisArg?: any): this is S[] & { 0: S; }; (predicate: (value: string, index: number, array: string[]) => unknown, thisArg?: any): boolean; }'. Two different types with this name exist, but they are unrelated.
!!! error TS2322:       Type predicate 'this is any[] & { 0: S; }' is not assignable to 'this is any[] & { 0: S; }'.
!!! error TS2322:         Type 'any[] & { 0: S; }' is not assignable to type 'any[] & { 0: S; }'. Two different types with this name exist, but they are unrelated.
!!! error TS2322:           Type 'any[] & { 0: S; }' is not assignable to type '{ 0: S; }'.
!!! error TS2322:             Types of property '0' are incompatible.
!!! error TS2322:               Type 'S' is not assignable to type 'S'. Two different types with this name exist, but they are unrelated.
!!! error TS2322:                 'S' is assignable to the constraint of type 'S', but 'S' could be instantiated with a different subtype of constraint 'string'.
        }
        else {
            execResult = matchResult
            ~~~~~~~~~~
!!! error TS2322: Type 'RegExpMatchArray' is not assignable to type 'RegExpExecArray'.
!!! error TS2322:   Property 'index' is optional in type 'RegExpMatchArray' but required in type 'RegExpExecArray'.
        }
    }
    